Update changes Contact and Education

--- a/Education.html
+++ b/Education.html
@@ -17,40 +17,40 @@
         <div class="content"><h2>Education</h2>
             <div style="width: 80%;"><hr></div>
             <section style="margin-top: 20px;">
-                <p"><a href="https://www.oth-aw.de/en/studies/study-offers/study-programmes/bachelor/digital-technology-management/structure/">BSc Digital Technology and Managament. 2025 - Present</a></p>
-                <p">The Digital Technology and Management programme offers a blend of interdisciplinary and practical education in ICT, operational processes, and management. With international exposure and industry collaboration, the curriculum spans mathematics, digital technology, management, integrative modules, language, and soft skills. Graduates are well-prepared for diverse roles in various industries.</p>
-                <p">The core modules include <b></b>Mathematics, Algorithms and Data Structures, Object-oriented Coding, Statistics and Quantitative Methods, Information Systems and Databases, Evidence-based Methods (EBM), IoT Technology, Sensors for Smart Systems, Communication Technology, Production Technology, Innovation and Technology Lifecycle Management.</p>
+                <p><a href="https://www.oth-aw.de/en/studies/study-offers/study-programmes/bachelor/digital-technology-management/structure/">BSc Digital Technology and Managament. 2025 - Present</a></p>
+                <p>The Digital Technology and Management programme offers a blend of interdisciplinary and practical education in ICT, operational processes, and management. With international exposure and industry collaboration, the curriculum spans mathematics, digital technology, management, integrative modules, language, and soft skills. Graduates are well-prepared for diverse roles in various industries.</p>
+                <p>The core modules include <b></b>Mathematics, Algorithms and Data Structures, Object-oriented Coding, Statistics and Quantitative Methods, Information Systems and Databases, Evidence-based Methods (EBM), IoT Technology, Sensors for Smart Systems, Communication Technology, Production Technology, Innovation and Technology Lifecycle Management.</p>
             </section> 
 
             <div style="width: 80%;"><hr></div>
             <section style="margin-top: 20px;">
-                <p"><a href="https://www.thi.de/en/engineering-and-management/degree-programmes/design-leadership-msc/">Design Leadership. 2022 - 2025</a></p>
-                <p">This study focuses on leveraging the mindset, tools, techniques, and methods of design to enhance leadership practices. It is structured as an interdisciplinary program at the intersection of design, economy, and technology. The core content areas emphasize digitalization, internationality, entrepreneurship, and sustainability.</p>
+                <p><a href="https://www.thi.de/en/engineering-and-management/degree-programmes/design-leadership-msc/">Design Leadership. 2022 - 2025</a></p>
+                <p>This study focuses on leveraging the mindset, tools, techniques, and methods of design to enhance leadership practices. It is structured as an interdisciplinary program at the intersection of design, economy, and technology. The core content areas emphasize digitalization, internationality, entrepreneurship, and sustainability.</p>
                 <p">The core modules include <b></b>projects interdisciplinary innovation and design creation, advanced management theory and methods, creativity methods in business, individual electives, applied design leadership, design prototyping, design leadership methods, design culture theory and methods, and a scientific research seminar.</p>
             </section> 
             
             <section style="margin-top: 20px;">
-                <p"><a href="https://www.nithh.org/your-mba-in-technology-management">MBA Business Administration. 2018 - 2022</a></p>
-                <p">The study focuses on mastering management tasks responsibly, specifically designed for engineers. It operates as an interdisciplinary program integrating technology, management, and innovation. The primary emphasis is on developing skills to thrive in dynamic environments and to influence the future proactively. This program prepares engineers for leadership roles across diverse industries by equipping them with practical management competencies and innovative lifelong learning opportunities through hands-on projects in technology management.</p>
-                <p">The core modules encompass Economics, Accounting, Finance, technology management, and innovative projects, as well as business management and business cases. Additionally, the program emphasizes soft skills such as teamwork and leadership. Through hands-on projects and optimal learning environments, students acquire essential management competencies, preparing them for leadership roles across a variety of industries.</p>
+                <p><a href="https://www.nithh.org/your-mba-in-technology-management">MBA Business Administration. 2018 - 2022</a></p>
+                <p>The study focuses on mastering management tasks responsibly, specifically designed for engineers. It operates as an interdisciplinary program integrating technology, management, and innovation. The primary emphasis is on developing skills to thrive in dynamic environments and to influence the future proactively. This program prepares engineers for leadership roles across diverse industries by equipping them with practical management competencies and innovative lifelong learning opportunities through hands-on projects in technology management.</p>
+                <p>The core modules encompass Economics, Accounting, Finance, technology management, and innovative projects, as well as business management and business cases. Additionally, the program emphasizes soft skills such as teamwork and leadership. Through hands-on projects and optimal learning environments, students acquire essential management competencies, preparing them for leadership roles across a variety of industries.</p>
             </section> 
 
             <section style="margin-top: 30px;">
-                <p"><a href="#">Diploma in Machine Learning, Outcast Academy. 2025 - Present</a></p>
-                <p">The Machine Learning Bootcamp equips learners with a comprehensive understanding and practical skills in data science and machine learning. Emphasizing hands-on experience and real-world applications, the curriculum covers data analysis, machine learning model development, and neural network design and training.</p>
-                <p">The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model Development (TensorFlow, Keras), Neural Networks and Deep Learning.</p>
+                <p><a href="#">Diploma in Machine Learning, Outcast Academy. 2025 - Present</a></p>
+                <p>The Machine Learning Bootcamp equips learners with a comprehensive understanding and practical skills in data science and machine learning. Emphasizing hands-on experience and real-world applications, the curriculum covers data analysis, machine learning model development, and neural network design and training.</p>
+                <p>The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model Development (TensorFlow, Keras), Neural Networks and Deep Learning.</p>
             </section>
     
             <section style="margin-top: 30px;">
-                <p"><a href="https://www.w3schools.com/">Data Science Certification. W3 School. 2.2021 - 7.2021</a></p>
-                <p">A Data Science Certification course equips you with essential skills in data analysis, machine learning, and statistical modeling. STudents are taught Python, SQL, and R, and gain hands-on experience with real-world projects. The course covers data visualization, predictive modeling, and data mining, preparing you for a career in data science. No prior experience is required, making it accessible to beginners.</p>
-                <p">The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model and Algorithms, Statistical Methods and Predictive Analysis.</p>
+                <p><a href="https://www.w3schools.com/">Data Science Certification. W3 School. 2.2021 - 7.2021</a></p>
+                <p>A Data Science Certification course equips you with essential skills in data analysis, machine learning, and statistical modeling. STudents are taught Python, SQL, and R, and gain hands-on experience with real-world projects. The course covers data visualization, predictive modeling, and data mining, preparing you for a career in data science. No prior experience is required, making it accessible to beginners.</p>
+                <p>The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model and Algorithms, Statistical Methods and Predictive Analysis.</p>
             </section>
 
             <section style="margin-top: 30px;">
-                <p"><a href="https://atbu.edu.ng/">BSc Electrical and Electronics Engineering, Abubakar Tafawa Balewa University Bauchi. 2012</a></p>
-                <p">This study programme equips students with the skills and knowledge needed to tackle complex technical challenges in electricity, electronics, and power systems. By combining theoretical foundations with hands-on experience, students learn to design, analyze, and optimize electrical systems, manage electronic devices, and ensure the efficient operation of power systems. The curriculum covers cutting-edge technologies, innovative methodologies, and interdisciplinary approaches, preparing graduates for diverse roles in industries such as renewable energy, telecommunications, automation, and smart grid management. Additionally, students develop problem-solving abilities, critical thinking, and practical expertise, making them valuable assets in the ever-evolving field of electrical engineering.</p>
-                <p">The core modules include Engineering Mathematics, Power Electronics, Telecommunications, Semiconductor Technology, Programming, Microcontrollers and Microprocessors, and Management.</p>
+                <p><a href="https://atbu.edu.ng/">BSc Electrical and Electronics Engineering, Abubakar Tafawa Balewa University Bauchi. 2012</a></p>
+                <p>This study programme equips students with the skills and knowledge needed to tackle complex technical challenges in electricity, electronics, and power systems. By combining theoretical foundations with hands-on experience, students learn to design, analyze, and optimize electrical systems, manage electronic devices, and ensure the efficient operation of power systems. The curriculum covers cutting-edge technologies, innovative methodologies, and interdisciplinary approaches, preparing graduates for diverse roles in industries such as renewable energy, telecommunications, automation, and smart grid management. Additionally, students develop problem-solving abilities, critical thinking, and practical expertise, making them valuable assets in the ever-evolving field of electrical engineering.</p>
+                <p>The core modules include Engineering Mathematics, Power Electronics, Telecommunications, Semiconductor Technology, Programming, Microcontrollers and Microprocessors, and Management.</p>
             </section>
         </div>
         <div class="Footer">
