--- a/Education.html
+++ b/Education.html
@@ -36,7 +36,7 @@
             </section> 
 
             <section style="margin-top: 30px;">
-                <p><a href="#">Diploma in Machine Learning, Outcast Academy. 2025 - Present</a></p>
+                <p style="text-decoration: underline;">Diploma in Machine Learning, Outcast Academy. 2025 - Present</p>
                 <p>The Machine Learning Bootcamp equips learners with a comprehensive understanding and practical skills in data science and machine learning. Emphasizing hands-on experience and real-world applications, the curriculum covers data analysis, machine learning model development, and neural network design and training.</p>
                 <p>The core modules include Data Analysis and Visualization with Python (Pandas, NumPy, Matplotlib), Machine Learning Model Development (TensorFlow, Keras), Neural Networks and Deep Learning.</p>
             </section>
