--- a/Project.html
+++ b/Project.html
@@ -41,7 +41,7 @@
                 <p>Project Overview:</p>
                 <li>Developed a computer vision prediction model to recognize handwritten digits using the MNIST dataset.
                 <li>Implemented the model using TensorFlow, PyTorch, and Scikit-Learn libraries.</p>
-                <p><b>Skills Acquired:</b></p>
+                <p>Skills Acquired:</p>
                 <li>Data Preprocessing: Loaded and prepared the MNIST dataset, including normalization and reshaping of images. Split the dataset into training and testing sets for model evaluation.</li>
                 <li>Feature Engineering: Defined features and target variables, and split the dataset into training and testing sets.</li>
                 <li>Model Development: Created and trained convolutional neural networks (CNNs) using TensorFlow and PyTorch. Fine-tuned hyperparameters to optimize model performance.</li>
