Commit changes name

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <div class="big" style="text-align: center;"><img src="banner.jpg" alt="Banner" class="banner-image"><h1>Francis Owoicho Idoko</h1></div>
+        <div class="big" style="text-align: center;"><img src="banner.jpg" alt="Banner" class="banner-image"><h1>Francis Idoko</h1><br><p>Professional Data Analyst | 5+ years</p></div>
         <div class="menu">
             <img src="image.jpg" alt="my image" style="display: block;">
             <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html">Project</a><br><a href="Contact.html"><b style="color: rgb(126, 230, 230);">Contact</b></a></div>
