Updatd all pages

--- a/Education.html
+++ b/Education.html
@@ -60,7 +60,7 @@
         </div>
         <div class="Footer">
             <div style="width: 50px;"><hr></div>
-            <p>&copy Francis Owoicho idoko All Rights Reserved</p>
+            <p>&copy2025 Francis Owoicho idoko All Rights Reserved</p>
         </div>
     </div>
 </body>
