Commit changes line height

--- a/Contact.html
+++ b/Contact.html
@@ -15,23 +15,22 @@
             <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html">Project</a><br><a href="Contact.html"><b style="color: rgb(126, 230, 230);">Contact</b></a></div>
         </div>
         <div class="content"><h2>Contacts</h2>
-            
-           <section style="margin-top: 30px;">
             <div style="width: 80%;"><hr></div>
+           <section style="margin-top: 30px;"">
             <p">Home Address:</p>
             <p">Haunwöhrer  Straße 99</p>
             <p">85051, Ingolstadt</p>
             <p">Bayern, Germany</p>
            </section> 
 
+           <div style="width: 80%;"><hr></div>
            <section style="margin-top: 30px;">
-            <div style="width: 80%;"><hr></div>
             <p">Phone:</p>
             <p">+4915738220234</p>
            </section>
 
+           <div style="width: 80%;"><hr></div>
            <section style="margin-top: 30px;">
-            <div style="width: 80%;"><hr></div>
             <p">Email:</p>
             <p">francisowoichoidoko@gmail.com</p>
            </section>
