Commit Project.html mystyle.css

--- a/Project.html
+++ b/Project.html
@@ -74,7 +74,7 @@
                 <li>Regression Tables: Proficiency in summarizing regression results and insights from regression tables.</li>
             </section>
 
-        <div class="Footer">
+        <div class="Footer" style="margin-left: -10px;">
             <div style="width: 50px;"><hr></div>
             <p>&copy2025 Francis Owoicho idoko All Rights Reserved</p>
         </div>
