--- a/Project.html
+++ b/Project.html
@@ -26,7 +26,7 @@
                 <li>Feature Engineering: Defined features and target variables, and split the dataset into training and testing sets.</li>
                 <li>Model Evaluation: Evaluated the model's performance using Mean Squared Error (MSE), Root Mean Squared Error (RMSE), and Mean Absolute Error (MAE).</li>
                 <li>Version Control: Utilized Git commands (git add, git commit, git push, git pull) to manage the repository and collaborated with others.</li>
-                <lo>GitHub Pages: Hosted and rendered HTML files to display the project as a website.</li>
+                <li>GitHub Pages: Hosted and rendered HTML files to display the project as a website.</li>
                 <p>Learning Outcomes:</p>
                 <li>Gained hands-on experience with machine learning workflows and data preprocessing techniques.</li>
                 <li>Improved skills in model training, evaluation, and hyperparameter tuning using XGBoost.</li>
