--- a/Project.html
+++ b/Project.html
@@ -19,7 +19,7 @@
             <section style="font-weight: lighter;">
                 <div style="width: 80%;"><hr></div>
                 <p>Machine Learning Project</p>
-                <p><a href="predictionmodel_xgboost.jpg">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></p>
+                <p><a href="https://github.com/fri-owi-ido/Machine-Learning" target="_blank">Machine learning prediction model designed using python, scikit-learn, and xgboost library</a></p>
                 <p>The model aimed to predict precipitation values (PRCP) based on weather data.</p>
                 <p>Skills Acquired:</p>
                 <li>Data Preprocessing: Handled missing and erroneous data, converted categorical data to numerical codes, and inferred object types.</li>
