Update Project.htm SQL

--- a/Project.html
+++ b/Project.html
@@ -74,6 +74,24 @@
                 <li>Regression Tables: Proficiency in summarizing regression results and insights from regression tables.</li>
             </section>
 
+            <section style="margin-top: 30px; font-weight: lighter;">
+                <div style="width: 80%;"><hr></div>
+                <p>Data SQL Fundamentals</p>
+                <p><a href="https://github.com/fri-owi-ido/SQL-Fundamentals.git" target="_blank">Data Science Crash Course</a></p>
+                <p>Summary:</p>
+                <li>The course covers essential SQL concepts, providing a solid foundation in database management and data manipulation. Key topics include SELECT statements, creating databases, creating tables, and using aliases.</li>
+                <p>Key Learnings:</p>
+                <li>SELECT Statements: Mastery in writing SELECT statements to retrieve specific data from databases.</li>
+                <li>Creating Databases: Proficiency in creating and managing databases using SQL commands.</li>
+                <li>Using Aliases: Ability to use aliases to simplify complex queries and improve readability.</li>
+                <li>Creating Tables: Expertise in defining and creating tables within databases.</li>
+                <li>Functions and Aggregates: Understanding of aggregate functions, GROUP BY, and other data analysis techniques.</li>
+                <li>SQL Constraints: Knowledge of constraints like PRIMARY KEY, FOREIGN KEY, and UNIQUE.</li>
+                <li>Joins and Clauses: Proficiency in using JOIN clauses, WHERE clauses, and wildcard characters for more advanced queries.</li>
+                <li>Linear Regression: Expertise in building, evaluating, and interpreting linear regression models.</li>
+                <li>Regression Tables: Proficiency in summarizing regression results and insights from regression tables.</li>
+            </section>
+
         <div class="Footer" style="margin-left: -10px;padding-top: 50px;">
             <div style="width: 50px;"><hr></div>
             <p>&copy2025 Francis Owoicho idoko All Rights Reserved</p>
