Update Project and CSS

--- a/Project.html
+++ b/Project.html
@@ -77,7 +77,7 @@
             <section style="margin-top: 30px; font-weight: lighter;">
                 <div style="width: 80%;"><hr></div>
                 <p>Data SQL Fundamentals</p>
-                <p><a href="https://github.com/fri-owi-ido/SQL-Fundamentals.git" target="_blank">Data Science Crash Course</a></p>
+                <p><a href="https://github.com/fri-owi-ido/SQL-Fundamentals.git" target="_blank">SQL Fundamentals</a></p>
                 <p>Summary:</p>
                 <li>The course covers essential SQL concepts, providing a solid foundation in database management and data manipulation. Key topics include SELECT statements, creating databases, creating tables, and using aliases.</li>
                 <p>Key Learnings:</p>
