--- a/Contact.html
+++ b/Contact.html
@@ -12,25 +12,25 @@
         <div class="big" style="text-align: center;"><img src="banner.jpg" alt="Banner" class="banner-image"><h1>Francis Owoicho Idoko</h1><br><p class="role">Professional Data Analyst | 5+ years</p></div>
         <div class="menu">
             <img src="image.jpg" alt="my image" style="display: block;">
-            <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html">Project</a><br><a href="Contact.html"><b style="color: rgb(126, 230, 230);">Contact</b></a></div>
+            <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html">Project</a><br><a href="Contact.html"><n style="color: rgb(126, 230, 230);">Contact</n></a></div>
         </div>
         <div class="content"><h2>Contacts</h2>
-            <div style="width: 80%;"><hr></div>
-           <section style="margin-top: 30px;"">
+            <div style="width: 100%;"><hr></div>
+           <section style="margin-top: 20px;"">
             <p">Home Address:</p>
             <p">Haunwöhrer  Straße 99</p>
             <p">85051, Ingolstadt</p>
             <p">Bayern, Germany</p>
            </section> 
 
-           <div style="width: 80%;"><hr></div>
-           <section style="margin-top: 30px;">
+           <div style="width: 100%;"><hr></div>
+           <section style="margin-top: 20px;">
             <p">Phone:</p>
             <p">+4915738220234</p>
            </section>
 
-           <div style="width: 80%;"><hr></div>
-           <section style="margin-top: 30px;">
+           <div style="width: 100%;"><hr></div>
+           <section style="margin-top: 20px;">
             <p">Email:</p>
             <p">francisowoichoidoko@gmail.com</p>
            </section>
