--- a/Project.html
+++ b/Project.html
@@ -12,7 +12,7 @@
         <div class="big" style="text-align: center;"><img src="banner.jpg" alt="Banner" class="banner-image"><h1>Francis Owoicho Idoko</h1><br><p class="role">Professional Data Analyst | 5+ years</p></div>
         <div class="menu">
             <img src="image.jpg" alt="my image" style="display: block;">
-            <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html"><b style="color: rgb(126, 230, 230);">Project</b></a><br><a href="Contact.html">Contact</a></div>
+            <div><a href="index.html">Home</a><br><a href="Education.html">Education</a><br><a href="Project.html"><n style="color: rgb(126, 230, 230);">Project</n></a><br><a href="Contact.html">Contact</a></div>
         </div>
         <div class="content"><h2>Project and Self-Learning</h2>
 
