Commit all updates

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="Footer">
             <div style="width: 50px;"><hr></div>
-            <p>&copy2025 Francis Owoicho idoko All Rights Reserved</p>
-        </div>
+            <p>&copy 2025 Francis Owoicho Idoko All Rights Reserved
+            </div>
     </div>
 </body>
 </html>
