--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
         </div>
         <div class="Footer">
             <div style="width: 50px;"><hr></div>
-            <p>&copy2025 Francis Owoicho idoko All Rights Reserved</p>
+            <p>&copy 2025 Francis Owoicho Idoko All Rights Reserved
         </div>
     </div>
 </body>
