--- a/Project.html
+++ b/Project.html
@@ -94,8 +94,8 @@
 
         <div class="Footer" style="margin-left: -10px;padding-top: 50px;">
             <div style="width: 50px;"><hr></div>
-            <p>&copy2025 Francis Owoicho idoko All Rights Reserved</p>
-        </div>
+            <p>&copy 2025 Francis Owoicho Idoko All Rights Reserved
+            </div>
     </div>
 </body>
 </html>
