--- a/Project.html
+++ b/Project.html
@@ -92,10 +92,11 @@
                 <li>Regression Tables: Proficiency in summarizing regression results and insights from regression tables.</li>
             </section>
 
-        <div class="Footer" style="margin-left: -10px;padding-top: 50px;">
-            <div style="width: 50px;"><hr></div>
-            <p>&copy 2025 Francis Owoicho Idoko All Rights Reserved
+            <div class="Footer" style="margin-left: -30px;">
+                <div style="width: 50px;"><hr></div>
+                <p>&copy 2025 Francis Owoicho Idoko All Rights Reserved
             </div>
-    </div>
+        </div>
+    </div>    
 </body>
 </html>
